<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.studyjamscn.s1.sj23.liuchuang.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/BigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/AppName" />

        <TextView
            style="@style/MidText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AppDescription" />
    </LinearLayout>


    <Button
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="textSize"
        android:text="@string/font_size" />

    <Button
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="torch"
        android:text="@string/torch" />

    <Button
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="network"
        android:text="@string/network" />

    <Button
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="wlan"
        android:text="@string/WLAN" />

    <Button
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="contacts"
        android:text="@string/contacts" />
</LinearLayout>
